ajustado layout base (sidenav e toolbar), e iniciado implementação da rotina de relatório

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
   <div class="row m-0">
     <div class="col-md-12 container-info mat-elevation-z5">
       <div class="w-100 d-flex justify-content-center align-items-center">
-        <span class="font-weight-bolder text-center mr-2 font-size-18px">Dados do dia {{this.getDateIni()}}
-          à {{this.getDateFim()}}</span>
+        <span class="font-weight-bolder text-center mr-2 font-size-18px">Dados dos dias {{this.getDateIni()}}
+          a {{this.getDateFim()}}</span>
         <button type="button"
                 pTooltip="Filtrar"
                 (click)="dialodFiltroData = true"
