--- a/src/app/usuario/usuario.form.component.html
+++ b/src/app/usuario/usuario.form.component.html
@@ -109,7 +109,7 @@
           </div>
         </div>
 
-        <div *ngIf="object.id == null" class="row">
+        <div *ngIf="!object?.id" class="row">
           <div class="col-md-6">
             <div class="form-group">
               <label for="senha">Senha</label>
