--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,14 +1,14 @@
 <mat-drawer-container class="example-sidenav" style="height: calc(100vh - 50px)">
-  <mat-drawer #drawer [opened]="true" mode="side" style="width: 100%" [disableClose]="true">
-    <mat-nav-list #navList>
+  <mat-drawer #drawer id="drawer" [opened]="true" mode="side" style="width: 100%" [disableClose]="true" class="drawer float-drawer">
+    <mat-nav-list>
       <a *ngFor="let menuItem of menuItems" mat-list-item [id]="[menuItem.id]" [routerLink]="[menuItem.path]"
-         routerLinkActive="active" class="color-toolbar">
+         routerLinkActive="active" class="text-white" style="font-size: 0.9rem !important;">
         <i class="fa fa-{{menuItem.icon}} mr-2 color-icons" mat-list-icon></i>
         {{menuItem.title}}
-        <mat-divider></mat-divider>
+        <mat-divider style="background-color: rgba(255, 255, 255, 0.2) !important;"></mat-divider>
       </a>
 
-      <a mat-list-item (click)="toggleSubMenuCadastro()">
+      <a mat-list-item (click)="toggleSubMenuCadastro()" class="text-white">
         <i class="fa fa-pencil mr-2 color-icons" mat-list-icon></i>
         Cadastros
         <mat-icon *ngIf="!showSubMenuCadastro">chevron_right</mat-icon>
@@ -17,10 +17,10 @@
 
       <mat-nav-list class="sidenav-submenu" *ngIf="showSubMenuCadastro" style="margin-left: 25px !important;">
         <a *ngFor="let menuItem of menuCadastros" mat-list-item [id]="[menuItem.id]" [routerLink]="[menuItem.path]"
-           routerLinkActive="active" class="color-toolbar">
+           routerLinkActive="active" class="text-white">
           <i class="fa fa-{{menuItem.icon}} mr-2 color-icons" mat-list-icon></i>
           {{menuItem.title}}
-          <mat-divider></mat-divider>
+          <mat-divider style="background-color: rgba(255, 255, 255, 0.2) !important;"></mat-divider>
         </a>
       </mat-nav-list>
 
