--- a/src/app/relatorio/relatorio.form.component.html
+++ b/src/app/relatorio/relatorio.form.component.html
@@ -6,10 +6,11 @@
           <app-voltar (onClick)="back()"></app-voltar>
           <h4 class="m-0">Cadastro de Relatório</h4>
         </div>
+        <app-help [messageHelp]="'Verificar se irá precisar colocar uma mini documentação'"></app-help>
       </div>
     </mat-card-title>
     <mat-card-content>
-      <form #form="ngForm" (submit)="save()"
+      <form #form="ngForm" (submit)="preSave()"
             enctype="multipart/form-data">
         <div class="row">
           <div class="col-md-2">
@@ -48,9 +49,9 @@
                           [url]="getUrlUploadImages()"
                           (onUpload)="onUpload($event)"
                           [showUploadButton]="false"
-                          chooseLabel="Inserir Arquivo Jasper"
+                          chooseLabel="Inserir Arquivo Jrxml"
                           cancelLabel="Remover"
-                          accept=".jasper"
+                          accept=".jrxml"
                           maxFileSize="1000000">
               <ng-template pTemplate="content">
                 <ul *ngIf="uploadedFiles.length">
@@ -61,21 +62,19 @@
           </div>
         </div>
 
-        <p-fieldset legend="Parâmetros" style="margin-bottom: 10px">
-          <form>
+        <p-fieldset legend="Parâmetros">
+          <form (submit)="insertParam()">
             <div class="row">
               <div class="col-md-4">
                 <div class="form-group">
                   <label for="nameParam">Nome do Parâmetro</label>
-                  <span class="field-required">*</span>
                   <i class="fa fa-question-circle-o float-right"
                      pTooltip="O nome do parâmetro deverá ser exatamente igual ao informado na criação do relatório Jasper.">
                   </i>
                   <input type="text"
                          id="nameParam"
                          name="nameParam"
-                         required
-                         validation
+                         #nomeParam
                          [(ngModel)]="relatorioParams.nameParam"
                          class="form-control"
                          pInputText>
@@ -85,15 +84,12 @@
               <div class="col-md-4">
                 <div class="form-group">
                   <label for="aliasParam">Alias do Parâmetro</label>
-                  <span class="field-required">*</span>
                   <i class="fa fa-question-circle-o float-right"
                      pTooltip="O alias é o nome que será utilizado no filtro do relatório, ao executá-lo no sistema.">
                   </i>
                   <input type="text"
                          id="aliasParam"
                          name="aliasParam"
-                         required
-                         validation
                          [(ngModel)]="relatorioParams.aliasParam"
                          class="form-control"
                          pInputText>
@@ -103,7 +99,6 @@
               <div class="col-md-3">
                 <div class="form-group">
                   <label for="aliasParam">Tipo do Parâmetro</label>
-                  <span class="field-required">*</span>
                   <p-dropdown [options]="tipoParamDropdown"
                               [style]="{width: '100%'}"
                               [(ngModel)]="relatorioParams.tipoParam"
@@ -116,10 +111,9 @@
               <div class="col-md-1">
                 <div class="form-group">
                   <label class="invisible">Action</label>
-                  <button type="button"
+                  <button type="submit"
                           style="height: 35px"
                           class="form-control"
-                          (click)="insertParam()"
                           mat-stroked-button>
                     <mat-icon>done</mat-icon>
                   </button>
@@ -128,7 +122,7 @@
             </div>
           </form>
 
-          <div *ngIf="object?.paramsList?.length > 0" class="example-container mat-elevation-z8">
+          <div *ngIf="object?.paramsList?.length > 0" class="example-container mat-elevation-z8 mb-1">
             <mat-table #table="matTable" [dataSource]="object.paramsList">
               <ng-container matColumnDef="nameParam">
                 <mat-header-cell *matHeaderCellDef>Nome Parâmetro</mat-header-cell>
@@ -154,6 +148,7 @@
                 <mat-cell *matCellDef="let param">
                   <button class="btn btn-outline-primary rounded"
                           type="button"
+                          (click)="removeParam(param.nomeParam)"
                           pTooltip="Remover">
                     <i class="fa fa-trash-o"></i>
                   </button>
@@ -166,11 +161,7 @@
           </div>
         </p-fieldset>
 
-
-
-
-
-        <div class="row">
+        <div class="row mt-3">
           <div class="col-md-12 d-flex justify-content-end">
             <app-cancelar (onClick)="back()"></app-cancelar>
             <app-salvar [typeButton]="'submit'"></app-salvar>
@@ -180,3 +171,5 @@
     </mat-card-content>
   </mat-card>
 </div>
+
+
