--- a/src/app/relatorio/relatorio.list.component.html
+++ b/src/app/relatorio/relatorio.list.component.html
@@ -16,16 +16,16 @@
 
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Código</mat-header-cell>
-            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.id}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="generateReport(row.id)">{{row.id}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="nome">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Nome</mat-header-cell>
-            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.nome)">{{row.nome}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="generateReport(row.id)">{{row.nome}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef> Opções </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef> Opções</mat-header-cell>
             <mat-cell *matCellDef="let row">
               <button class="btn btn-outline-secondary rounded mr-2"
                       type="button"
