--- a/src/app/item/bottomScheetItem/bottomSheetItem.component.html
+++ b/src/app/item/bottomScheetItem/bottomSheetItem.component.html
@@ -9,7 +9,7 @@
     <span mat-line>Reservas</span>
   </a>
 
-  <a mat-list-item (click)="click('E')">
+  <a *ngIf="showEditAndDelete" mat-list-item (click)="click('E')">
     <i *ngIf="!isAlunoOrProfessor" class="fa fa-2x fa-edit" mat-list-icon></i>
     <span *ngIf="!isAlunoOrProfessor" mat-line>Editar</span>
 
@@ -17,7 +17,7 @@
     <span *ngIf="isAlunoOrProfessor" mat-line>Visualizar</span>
   </a>
 
-  <a *ngIf="!isAlunoOrProfessor" mat-list-item (click)="click('R')">
+  <a *ngIf="!isAlunoOrProfessor && showEditAndDelete" mat-list-item (click)="click('R')">
     <i class="fa fa-2x fa-trash-o" mat-list-icon></i>
     <span mat-line>Remover</span>
   </a>
