--- a/src/app/usuario/usuario.list.component.html
+++ b/src/app/usuario/usuario.list.component.html
@@ -29,8 +29,15 @@
             <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.username}}</mat-cell>
           </ng-container>
 
+          <ng-container matColumnDef="permissoes">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Grupo de Acesso</mat-header-cell>
+            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">
+              {{formatGruposAcesso(row.permissoes)}}
+            </mat-cell>
+          </ng-container>
+
           <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef> Opções </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef> Opções</mat-header-cell>
             <mat-cell *matCellDef="let row">
               <button class="btn btn-outline-secondary rounded mr-2"
                       type="button"
