realizado ajustes no layout, ajustes em algumas pendências

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,7 @@
 .only-login {
   width: 100% !important;
   height: 100vh !important;
+  background-image: url('src/assets/background.png');
 }
 
 .content {
