--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,6 +3,7 @@
   <div class="col-md-5">
     <mat-card style="width: 400px; height: 400px;" class="d-flex justify-content-between flex-column">
       <div class="div-header">
+        <img src="assets/utfpr.jpg" alt="Logo UTFPR" width="50px" style="margin-right: 10px">
         <span>Sistema Laboratório</span>
       </div>
       <mat-card-content class="h-100">
