--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -19,12 +19,9 @@
       <button class="btn-sidenav" pTooltip="Sair" tooltipPosition="bottom">
         <a (click)="logout()"
            class="d-flex">
-          <mat-icon class="text-white">exit_to_app</mat-icon>
+          <mat-icon class="text-black-50">exit_to_app</mat-icon>
         </a>
       </button>
     </div>
   </div>
 </mat-toolbar>
-
-
-<!-- #222d43-->
