--- a/src/app/emprestimo/emprestimo.form.component.html
+++ b/src/app/emprestimo/emprestimo.form.component.html
@@ -219,8 +219,8 @@
             <ng-container matColumnDef="devolver">
               <mat-header-cell *matHeaderCellDef> Devolver</mat-header-cell>
               <mat-cell *matCellDef="let itemEmprestimo">
-                <span *ngIf="itemEmprestimo.item.devolver">Sim</span>
-                <span *ngIf="!itemEmprestimo.item.devolver">Não</span>
+                <span *ngIf="itemEmprestimo.item.tipoItem === 'C'">Sim</span>
+                <span *ngIf="itemEmprestimo.item.tipoItem === 'P'">Não</span>
               </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
             </ng-container>
