--- a/src/app/framework/loader/loader.component.css
+++ b/src/app/framework/loader/loader.component.css
@@ -1,4 +1,42 @@
-.loader {
+/*.loader {*/
+/*  position: fixed;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  background-color: #CCCCCC85;*/
+/*  margin: auto;*/
+/*  top: 50px;*/
+/*  left: 0;*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*  align-items: center;*/
+/*  z-index: 998;*/
+/*}*/
+
+/*.loader-content {*/
+/*  font-size: 18px;*/
+/*  width: 232px;*/
+/*  height: 104px;*/
+/*  z-index: 999;*/
+/*}*/
+
+/*.loader-content span {*/
+/*  position: relative;*/
+/*  top: -64px;*/
+/*  left: 113px;*/
+/*}*/
+
+/*@media (min-width: 1200px) {*/
+/*  .loader {*/
+/*    left: 260px;*/
+/*  }*/
+
+/*  .loader-content {*/
+/*    margin-right: 260px;*/
+/*  }*/
+/*}*/
+
+
+.loader-container {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -9,28 +47,107 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 998;
+  z-index: 98;
 }
 
 .loader-content {
-  font-size: 18px;
-  width: 232px;
-  height: 104px;
-  z-index: 999;
-}
-
-.loader-content span {
-  position: relative;
-  top: -64px;
-  left: 113px;
+  position: absolute;
+  width: auto;
+  height: auto;
+  z-index: 99;
 }
 
 @media (min-width: 1200px) {
-  .loader {
+  .loader-container {
     left: 260px;
+    width: calc(100% - 260px);
+    height: calc(100vh - 80px) !important;
+    margin-top: 15px !important;
+    border-radius: 10px !important;
   }
+}
 
-  .loader-content {
-    margin-right: 260px;
+.loader-content span {
+  font-family: 'Poppins', sans-serif;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+#loader {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #000000;
+  -webkit-animation: spin 1.7s linear infinite;
+  animation: spin 1.7s linear infinite;
+  z-index: 11;
+}
+
+#loader:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #e74c3c;
+  -webkit-animation: spin-reverse .6s linear infinite;
+  animation: spin-reverse .6s linear infinite;
+}
+
+#loader:after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: #FDCC2D;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin-reverse {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+  }
+}
+
+@keyframes spin-reverse {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 }
