--- a/src/app/grupo/grupo.form.component.html
+++ b/src/app/grupo/grupo.form.component.html
@@ -60,6 +60,7 @@
 </div>
 
 <p-dialog header="Itens Vinculados"
+          [modal]="true"
           [(visible)]="dialogItensRelacionados"
           [style]="{minWidth: '650px'}"
           [baseZIndex]="10000">
