--- a/src/app/item/item.list.component.html
+++ b/src/app/item/item.list.component.html
@@ -64,6 +64,7 @@
 </div>
 
 <p-dialog header="Reservas do Item"
+          [modal]="true"
           [(visible)]="dialogReservaitem"
           [style]="{minWidth: '650px'}"
           [baseZIndex]="10000">
