--- a/src/app/usuario/usuario.form.component.html
+++ b/src/app/usuario/usuario.form.component.html
@@ -136,6 +136,7 @@
 </div>
 
 <p-dialog header="Redefinir Senha"
+          [modal]="true"
           [(visible)]="dialogChangeSenha"
           [style]="{minWidth: '400px'}"
           [baseZIndex]="10000">
