--- a/src/styles.css
+++ b/src/styles.css
@@ -200,3 +200,35 @@ legend {
 .ui-fieldset-legend-text {
   font-size: 14px !important;
 }
+
+/* calendar touch ui */
+.ui-datepicker-touch-ui {
+  min-width: 80% !important;
+}
+
+
+/* table responsive */
+@media (max-width: 750px) {
+
+  .mat-table {
+    overflow-x: scroll;
+  }
+
+  .mat-cell,
+  .mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 10px;
+    line-break: unset;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+  }
+
+  .mat-row,
+  .mat-header-row {
+    display: table-row;
+  }
+
+}
