--- a/src/app/geral/help/help.component.html
+++ b/src/app/geral/help/help.component.html
@@ -12,10 +12,11 @@
           [baseZIndex]="10000">
 
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12" style="max-width: 400px !important">
         <p>{{messageHelp}}</p>
       </div>
     </div>
+
     <p-footer>
       <div class="row">
         <div class="col-md-12 d-flex justify-content-end">
