--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -4,8 +4,17 @@
       <i class="fa fa fa-bars text-black-50"></i>
     </button>
     <img src="../../assets/logo.png" alt="logo_constru" style="width: 40px">
-    <a *ngIf="widthScreen >= 600" routerLinkActive="active" routerLink="/" style="margin-left: 10px;" class="text-black-50 text-uppercase font-poppins text-decoration-none">Sistema de Gerenciamento do DAINF</a>
-    <a *ngIf="widthScreen < 600" routerLinkActive="active" routerLink="/" style="margin-left: 10px;" class="text-black-50 text-uppercase font-poppins text-decoration-none">Lab DAINF</a>
+    <a *ngIf="widthScreen >= 600"
+       routerLinkActive="active"
+       routerLink="/"
+       style="margin-left: 10px;"
+       class="text-black-50 text-uppercase font-poppins text-decoration-none">Sistema de Gerenciamento da Sala de Apoio do DAINF
+    </a>
+    <a *ngIf="widthScreen < 600"
+       routerLinkActive="active"
+       routerLink="/" style="margin-left: 10px;"
+       class="text-black-50 text-uppercase font-poppins text-decoration-none">Lab DAINF
+    </a>
   </div>
   <div>
     <div *ngIf="widthScreen > 768">
